# NE3D-ERP

./: .gitignore  .vercelignore  .worktreeinclude  CHECKLIST_RODADA_PEDIDOS_IA.md  ads.txt  app.js  app.txt.txt  capacitor.config.json  index.html  manifest.webmanifest  manual_simplifica3d.md  package-lock.json  package.json  style.css  sw.js  vercel.json
android/: variables.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/cpp/ai_chat/: ai_chat.cpp
android/app/src/main/java/br/com/ne3d/erp/: MainActivity.java  SimplificaBiometricPlugin.java  SimplificaFilesPlugin.java
android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
android/app/src/main/res/values/: ic_launcher_background.xml  strings.xml
docs/: BUGS.md  PROGRESSO_CODEX.md  RELATORIO_BUGS_SIMPLIFICA3D.md  TESTES.md  android-build.md  manual_simplifica3d.md  supabase-online.md
downloads/: update.json
scripts/: apply-supabase-email-templates.js  check-supabase-migrations.js  copy-android-apk.js  deploy-mercadopago-supabase.ps1  prepare-web.js  test-auth-hotfix.js  test-auth-ui.js  test-monetization.js  test-supabase-rest.js  test-telemetry-rest.js
src/services/: adMobService.js  adSenseService.js  errorTelemetry.js  monetizationLimits.js
supabase/: config.toml
supabase/functions/mercadopago-cancel-subscription/: index.ts
supabase/functions/mercadopago-create-payment/: index.ts
supabase/functions/mercadopago-create-subscription/: index.ts
supabase/functions/mercadopago-webhook/: index.ts
supabase/migrations/: 20260428103000_create_erp_online_tables.sql  20260428145500_security_profiles_logs.sql  20260428195500_saas_plans_clients_payments.sql  20260429083000_simplifica3d_saas_mercadopago.sql  20260430001000_plan_storage_and_token_deadline.sql  20260503110117_harden_saas_rpc_execute_privileges.sql  20260503112119_create_saas_profile_on_auth_signup.sql  20260503165716_simplify_plans_billing.sql  20260503175751_backfill_auth_users_saas_records.sql  20260503221859_fix_post_login_saas_sync_rls.sql  20260504111204_account_companies_members_sync.sql  20260504120234_onboarding_initial_flow.sql  20260504172615_app_telemetry_feedback.sql  20260504180540_fix_telemetry_severity_volatility.sql  20260504232433_superadmin_test_user_cleanup.sql  20260505125834_plans_ads_roles_suggestions.sql  20260505230205_restore_public_rest_grants.sql  20260505230616_split_anon_auth_rest_policies.sql  20260506194730_saas_license_authority_phase1.sql  20260507141306_harden_test_user_delete.sql  20260510012859_online_authoritative_sync_queue.sql  20260510214744_inventory_owner_rls.sql  20260511175836_mercadopago_hybrid_realtime_billing.sql  20260511193233_guard_empty_erp_backup_overwrite.sql  20260512120542_dashboard_analytics_profile_customization.sql
supabase/templates/: README.md  confirmation.html  email_change.html  email_changed_notification.html  invite.html  magic_link.html  password_changed_notification.html  plan_activated.html  reauthentication.html  recovery.html
(+1 files in other folders)
